# PartiMIP

./: .gitignore  LICENSE  README.md
Benchmark/: benchmark.txt  setup.sh
Evaluation/pre-compiled/FiberSCIP/: fscip
Evaluation/pre-compiled/PartiMIP-SCIP/: PartiMIP-SCIP
Evaluation/run/HiGHS/: 1.opt  (+12 more)
PartiMIP/PartiMIP-HiGHS/: CMakeLists.txt
PartiMIP/PartiMIP-HiGHS/src/MIPTree/: MIPNode.cpp  MIPNode.h  MIPTree.cpp  MIPTree.h
PartiMIP/PartiMIP-HiGHS/src/Presolve/: Presolve.cpp  Presolve.h
PartiMIP/PartiMIP-HiGHS/src/Scheduler/: Scheduler.cpp  Scheduler.h
PartiMIP/PartiMIP-HiGHS/src/Worker/: GeneralWorker.cpp  RootWorker.cpp  Worker.cpp  Worker.h
PartiMIP/PartiMIP-HiGHS/src/utils/: header.h  main.cpp  paras.cpp  utils.cpp
PartiMIP/PartiMIP-SCIP/: CMakeLists.txt
PartiMIP/PartiMIP-SCIP/src/MIPTree/: MIPNode.cpp  MIPNode.h  MIPTree.cpp  MIPTree.h
PartiMIP/PartiMIP-SCIP/src/Presolve/: Presolve.cpp  Presolve.h
PartiMIP/PartiMIP-SCIP/src/Scheduler/: Scheduler.cpp  Scheduler.h
PartiMIP/PartiMIP-SCIP/src/Worker/: GeneralWorker.cpp  RootWorker.cpp  Worker.cpp  Worker.h
PartiMIP/PartiMIP-SCIP/src/utils/: header.h  main.cpp  paras.cpp  paras.h  utils.cpp
Result/: FiberSCIP_128.txt  FiberSCIP_16.txt  FiberSCIP_32.txt  FiberSCIP_64.txt  FiberSCIP_8.txt  HiGHS_128.txt  HiGHS_16.txt  HiGHS_32.txt  HiGHS_64.txt  HiGHS_8.txt  HiGHS_Sequential.txt  PartiMIP_HiGHS_128.txt  PartiMIP_HiGHS_16.txt  PartiMIP_HiGHS_32.txt  PartiMIP_HiGHS_64.txt  PartiMIP_HiGHS_8.txt  PartiMIP_SCIP_128.txt  PartiMIP_SCIP_16.txt  PartiMIP_SCIP_32.txt  PartiMIP_SCIP_64.txt  PartiMIP_SCIP_8.txt  SCIP_Sequential.txt
(+42 files in other folders)
